SW-9354 Fixed jQuery scroll plugin so it works on IE Fixed tab changing on article detail page when clicking on a rate button Styling Changes on article detail page so the selectboxes have more width

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/detail.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/detail.less
@@ -423,7 +423,7 @@
 
 	.js--fancy-select {
 		.unitize-margin(0, 0, 8, 0);
-		width: 80%;
+        width: 100%;
 	}
 }
 
@@ -530,7 +530,13 @@
             }
         }
 
-        .product--buybox {
+        // Product configurator
+        .configurator--form .js--fancy-select {
+            width: 80%;
+        }
+
+        .configurator--form,
+        .buybox--form {
             width: 80%;
         }
     }
@@ -673,6 +679,11 @@
         .tab-menu--cross-selling .tab--container {
             display: none;
         }
+
+        .configurator--form,
+        .buybox--form {
+            width: 100%;
+        }
     }
 }
 
@@ -697,14 +708,14 @@
 
 		.buybox--inner {
             width: 100%;
-            float: none
+            float: none;
         }
 
         .product--base-info {
             .unitize-margin(10, 0, 20, 0);
             padding: 0;
             width: 100%;
-            float: none
+            float: none;
         }
 
         .product--properties {
